Fixed image alignment in speakers modal.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -114,4 +114,8 @@ dialog {
     left: 25%;
   }
 
+  img.speaker-photo {
+    float: right;
+  }
+
 }
